Made some comments more clear

--- a/Algorithms/Nick/Factor Finder/main.ipynb
+++ b/Algorithms/Nick/Factor Finder/main.ipynb
@@ -28,9 +28,13 @@
  "cells": [
   {
    "source": [
-    "Finding factors by using nearest square\n",
+    "## Finding factors by using nearest square\n",
     "\n",
-    "x*x=x^2\n",
+    "***\n",
+    "\n",
+    "Any compsite number can be described as a difference of squares. Here is some math:\n",
+    "\n",
+    "x*x=x^2 \n",
     "\n",
     "x^2 -y = (x + y) * (x - y)\n",
     "\n",
@@ -43,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +123,7 @@
     "\n",
     "print(\"Difference is:\", dif)\n",
     "\n",
-    "x = math.sqrt(sqr) # Switch from temp names to formula names\n",
+    "x = math.sqrt(sqr) # Square and switch names\n",
     "y = math.sqrt(dif)\n",
     "\n",
     "print(\"The factors are:\", (x-y), (x+y))\n",
@@ -129,6 +133,13 @@
     "else:\n",
     "    print(\"False\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ]
 }
