Fixed the "small square" bug 🐛

--- a/Algorithms/Nick/Factor Finder/main.ipynb
+++ b/Algorithms/Nick/Factor Finder/main.ipynb
@@ -10,15 +10,15 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.0-final"
+   "version": "3.8.1-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.9.0 64-bit",
+   "display_name": "Python 3.8.1 32-bit",
    "metadata": {
     "interpreter": {
-     "hash": "0119e98c97122c83769e8960ff66850731e8390214d7707b95b002b93799e09e"
+     "hash": "6fa8c4a0213b3e8e46e64ca221d4ef2f7254b1e53b83d6209b624a99d7aa7db4"
     }
    }
   }
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -95,31 +95,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Number is: 8\nNearest square is: 9\nDifference is: 1\nThe factors are: 2.0 4.0\nTrue\n"
+      "Number is: 3599\nNearest square is: 3600\nDifference is: 1\nThe factors are: 59.0 61.0\nTrue\n"
      ]
     }
    ],
    "source": [
     "# Lets put it all together\n",
+    "import math\n",
     "\n",
-    "num = 8 # Input \n",
+    "num = 3599 # Input \n",
     "print (\"Number is:\", num)\n",
     "\n",
     "sqr = round(math.sqrt(num)) # Convert to square\n",
     "sqr = sqr*sqr\n",
     "print(\"Nearest square is:\", sqr)\n",
+    "oldNum = num\n",
     "\n",
-    "if sqr > num: # Difference finding logic\n",
-    "    dif = sqr - num\n",
-    "else:\n",
-    "    dif = num - sqr\n",
+    "while sqr < num:\n",
+    "    print(\"Square too small:\", sqr)\n",
+    "    num = num + 1\n",
+    "    sqr = round(math.sqrt(num)) # Convert to square\n",
+    "    sqr = sqr*sqr\n",
+    "    print(\"New square:\", sqr)\n",
+    "\n",
+    "dif = sqr - oldNum\n",
     "\n",
     "print(\"Difference is:\", dif)\n",
     "\n",
@@ -128,10 +136,11 @@
     "\n",
     "print(\"The factors are:\", (x-y), (x+y))\n",
     "\n",
-    "if ((x-y)*(x+y) == num):\n",
+    "if ((x-y)*(x+y) == oldNum):\n",
     "    print(\"True\") # Win\n",
     "else:\n",
-    "    print(\"False\")"
+    "    print(\"False\")\n",
+    "    print((x-y)*(x+y))"
    ]
   },
   {
