Update MemoryUsage Interpreter 📊💾

--- a/Fun/MemoryUsage/MemoryUsage Interpreter.ipynb
+++ b/Fun/MemoryUsage/MemoryUsage Interpreter.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,12 +96,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Now to run it all together..."
+    "### Now to run it all together...\n",
+    "\n",
+    "Will this be the key to optomize [Arduino-Nano-Watch](https://github.com/nick-burrill/Arduino-Nano-Watch) to fit inside its 1kb of free memory?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
